see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.5, including beta and release candidate versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

05-Jul-2009 Gergo Erdosi
 ^ Replaced mod_status with its refactored version.
 ! Thanks to Andrea Tarr for helping refactor the mod_status module.
 # Fixed bug in installation.

05-Jul-2009 Andrew Eddie
 + Add accessability tweaks to admin mod_menu.
 + [#16547] Cancel button on Article Manager parameters does not work
 ^ All arguments are now optional in JParameter::__construct.
 ^ Refactored com_config.
 + Added support for tabbed configuration files in com_config component support.
 ^ Configured com_content component parameters to use tabs.

04-Jul-2009 Gergo Erdosi
 - Removed closing tag in configuration.php file.
 + Added new parameter option 'closingtag' to JRegistryFormatPHP::objectToString().
 ^ Syncronized configuration.php-dist with the changes.

04-Jul-2009 Andrew Eddie
 ^ SQL CHANGE: Add missing entries in jos_extensions.
 + Added new administrator template: bluestork.
 ^ Refactored admin mod_menu; added layout support.
 # Fixed bugs in module layout list parameter.
 ^ Menu changes based on Ron Severdia's suggestions added.
 # [#15509] JHTML::_() breaks on PHP 5.3.0 when calling methods which uses a reference in its argument list.
 # [#15813] PHP Notice During Installation
 # [#16527] JQuery class not imported in form/fields/accesslevels.php
 # [#16691] [patch] docblock typos in html.php
 ^ [#14459] JProfiler Time elapsed, Memory used
 # [#15367] JRegistry::setValue() return value is incorrect as per documentation
 + Added JRegistry::__toString magic method.
 # [#16941] administrator/backups not created
 - Removed JPATH_BACKUPS
 # [#15411] Invalid HTML in com_member templates