@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+06-Jul-2009 Andrew Eddie
+ # [#17103] Missing JText::_ in administrator/components/com_admin/helpers/html/directory.php
+
 05-Jul-2009 Gergo Erdosi
  ^ Replaced mod_status with its refactored version.
  ! Thanks to Andrea Tarr for helping refactor the mod_status module.
